--- a/templates/game.html
+++ b/templates/game.html
@@ -6,13 +6,11 @@
   <body>
 
     <form action="/madlib">
-      
-      <form>
+
       <label>Give us a name:</label>
       <input type="text" name="person">
-      </form>
 
-      <form>
+      <div>
       <label>Select a color</label>
       <select name="color">
         <option value="grey">grey</option>
@@ -20,9 +18,10 @@
         <option value="forest-green">forest green</option>
         <option value="saddle">saddle</option>
       </select>
-      </form>
-    
-      <form>
+      </div>
+
+
+      <div>
       <label>Select a noun</label>
       <select name="noun">
       <option value="waterbottle">waterbottle</option>
@@ -30,9 +29,9 @@
       <option value="humidifier">humidifier</option>
       <option value="plant">plant</option>
       </select>
-      </form>
+      </div>
 
-      <form>
+      <div>
       <label>Select an adjective</label>
       <select name="adjective">
       <option value="majestic">majestic</option>
@@ -40,10 +39,27 @@
       <option value="meaningless">meaningless</option>
       <option value="charming">charming</option>
       </select>
-      </form>
+      </div>
 
-      <form>
-      <button type="submit">Make Madlib></button>
+      <div>
+        <label>Select an adverb</label>
+
+        <input type="checkbox" name="adverb" value="clumsily">
+        <label>clumsily</label>
+
+        <input type="checkbox" name="adverb" value="loudly">
+        <label>loudly</label>
+
+        <input type="checkbox" name="adverb" value="warmly">
+        <label>warmly</label>
+
+        <input type="checkbox" name="adverb" value="spookily">
+        <label>spookily</label>
+      </div>
+
+
+
+      <button type="submit">Make Madlib</button>
       </form>
     </form>
   </body>
